--- a/mLingo/ClientApp/src/schema/styles/BEM.scss
+++ b/mLingo/ClientApp/src/schema/styles/BEM.scss
@@ -62,6 +62,7 @@
 }
 
 // --- --- 1.1.2 CollectionCreate
+
 .create__container, .create--collection{
     @extend .col-sm-12;
     padding: 1rem;
@@ -73,16 +74,13 @@
 }
 
 .create__details{
-    @extend .flex--center;
+    @extend .flex--start;
     @extend .col-12;
 }
 
 .details__img{
     @extend .img-fluid;
-}
-
-.details__body{
-    margin: auto;
+    margin: 0 25px;
 }
 
 .details__description{
@@ -102,4 +100,19 @@
 
 .details__buttons{
     @extend .flex--between;
+}
+
+.create__more{
+    @extend  .flex--complet;
+    margin: 1rem;
+}
+
+.action__description{
+    margin-left: 15px;
+    color: $dark-blue;
+    font-size: 1.75em;
+}
+
+.create__button{
+    margin: 20px 0;
 }
