--- a/mLingo/ClientApp/src/schema/styles/BEM.scss
+++ b/mLingo/ClientApp/src/schema/styles/BEM.scss
@@ -61,6 +61,12 @@
     font-weight: 900;
 }
 
+.card__link{
+    &:hover{
+        text-decoration: none !important;
+    }
+}
+
 // --- --- 1.1.2 CollectionCreate
 
 .create__container, .create--collection{
