--- a/mLingo/ClientApp/src/styles/css/variables.css
+++ b/mLingo/ClientApp/src/styles/css/variables.css
@@ -2,6 +2,14 @@
   font-family: 'Poppins', sans-serif;
 }
 
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+  border-bottom: 0;
+}
+
 a:hover, a:focus, a:checked {
   text-decoration: none;
 }
