--- a/mLingo/ClientApp/src/schema/styles/BEM.scss
+++ b/mLingo/ClientApp/src/schema/styles/BEM.scss
@@ -23,6 +23,11 @@
 // --- --- 1.1.1 CollectionCard
 // --- --- 1.2.1 SetCard
 
+
+//////////////////////////////////////////////////////
+/* --- --- 1.1.1 CollectionCard */
+//////////////////////////////////////////////////////
+
 .card__container{
     width: 150px;
     height: 150px;
@@ -68,7 +73,9 @@
     }
 }
 
-// --- --- 1.1.2 CollectionCreate
+//////////////////////////////////////////////////////
+/* --- --- 1.1.2 CollectionCreate */
+//////////////////////////////////////////////////////
 
 .create__container, .create--collection{
     @extend .col-sm-12;
@@ -124,7 +131,9 @@
     margin: 20px 0;
 }
 
-// --- --- 1.1.3 CollectionFlashcard
+//////////////////////////////////////////////////////
+/* --- --- 1.1.3 CollectionFlashcard */
+//////////////////////////////////////////////////////
 
 .flashcard__container{
     @extend .col-12, .flex--around;
