--- a/mLingo/ClientApp/src/styles/css/BEM.css
+++ b/mLingo/ClientApp/src/styles/css/BEM.css
@@ -11213,6 +11213,7 @@ a.text-dark:hover, a.text-dark:focus {
   max-width: 79%;
 }
 
+/* --- --- 1.1.1 CollectionCard */
 .card__container {
   width: 150px;
   height: 150px;
@@ -11270,6 +11271,7 @@ a.text-dark:hover, a.text-dark:focus {
   text-decoration: none !important;
 }
 
+/* --- --- 1.1.2 CollectionCreate */
 .create__container, .create--collection {
   padding: 1rem;
 }
@@ -11316,6 +11318,7 @@ a.text-dark:hover, a.text-dark:focus {
   margin: 20px 0;
 }
 
+/* --- --- 1.1.3 CollectionFlashcard */
 .flashcard__card {
   height: 200px;
   padding: 20px;
