--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -520,7 +520,7 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
           justify-content: space-between;
 }
 
-.flex--around, .flashcard__container {
+.flex--around, .flashcard__container, .collection__info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11366,13 +11366,14 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
-#all__containers__in__user__section {
+.all__containers__in__user__section, .collection__container {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 79%;
           flex: 0 0 79%;
   max-width: 79%;
 }
 
+/* --- --- 1.1.1 CollectionCard */
 .card__container {
   width: 150px;
   height: 150px;
@@ -11430,6 +11431,7 @@ a.text-dark:hover, a.text-dark:focus {
   text-decoration: none !important;
 }
 
+/* --- --- 1.1.2 CollectionCreate */
 .create__container, .create--collection {
   padding: 1rem;
 }
@@ -11476,6 +11478,7 @@ a.text-dark:hover, a.text-dark:focus {
   margin: 20px 0;
 }
 
+/* --- --- 1.1.3 CollectionFlashcard */
 .flashcard__card {
   height: 200px;
   padding: 20px;
@@ -11512,6 +11515,25 @@ a.text-dark:hover, a.text-dark:focus {
 
 .flashcard__definition:focus {
   outline: none;
+}
+
+/* --- --- 1.1.4 CollectionFlashcard */
+.collection__info {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #fff;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 25px;
+}
+
+.collection__title, .collection__description {
+  font-size: 1.5em;
+  color: #000536;
+}
+
+.collection__title {
+  font-weight: bold;
 }
 
 /* MENU */
