--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -11373,6 +11373,17 @@ a.text-dark:hover, a.text-dark:focus {
   max-width: 79%;
 }
 
+/* --- --- 1.1.4 CollectionScreen
+// --- 1.2 set_
+// --- 1.3 user_
+
+// 1. account_
+// --- 1.1 collection_
+// --- --- 1.1.1 CollectionCard
+// --- --- 1.2.1 SetCard
+
+
+//////////////////////////////////////////////////////
 /* --- --- 1.1.1 CollectionCard */
 .card__container {
   width: 150px;
@@ -11517,7 +11528,7 @@ a.text-dark:hover, a.text-dark:focus {
   outline: none;
 }
 
-/* --- --- 1.1.4 CollectionFlashcard */
+/* --- --- 1.1.4 CollectionScreen */
 .collection__container {
   padding: 20px;
 }
@@ -11538,6 +11549,12 @@ a.text-dark:hover, a.text-dark:focus {
 
 .collection__title {
   font-weight: bold;
+}
+
+/* --- --- 1.1.5 CollectionSearch */
+.search__title, .search__nofound {
+  font-size: 1.5em;
+  color: #000536;
 }
 
 /* MENU */
