--- a/mLingo/ClientApp/src/schema/styles/BEM.scss
+++ b/mLingo/ClientApp/src/schema/styles/BEM.scss
@@ -20,11 +20,11 @@
 // --- 1.3 user_
 /* --- --- 1.3.1 UserHead */
 /* --- --- 1.3.2 UserHead Section */
-
-// 1. account_
-// --- 1.1 collection_
-// --- --- 1.1.1 CollectionCard
-// --- --- 1.2.1 SetCard
+// 2. landpage
+// --- formpage_
+/* --- --- 2.1.1 Formulars Login and Register */
+// --- mainpage_
+/* --- --- 2.2.1 Newsletter */
 
 
 //////////////////////////////////////////////////////
@@ -285,7 +285,9 @@ overflow-y: hidden;
 }
 }
 
-
+//////////////////////////////////////////////////////
+/* --- --- 2.1.1 Formulars Login and Register */
+//////////////////////////////////////////////////////
 
 .forminput__container{
     @extend .col-12, .mb-3;
@@ -358,6 +360,7 @@ overflow-y: hidden;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 10vh 0;
 }
 
 .form__alreadyaccount{
@@ -419,3 +422,7 @@ overflow-y: hidden;
 .ggconnect__button{
     background-color:#DB4437;
 }
+
+//////////////////////////////////////////////////////
+/* --- --- 2.2.1 Newsletter */
+//////////////////////////////////////////////////////
