--- a/mLingo/ClientApp/src/styles/css/BEM.css
+++ b/mLingo/ClientApp/src/styles/css/BEM.css
@@ -11218,6 +11218,8 @@ a.text-dark:hover, a.text-dark:focus {
 /* --- --- 1.2.1 SetCard */
 /* --- --- 1.3.1 UserHead */
 /* --- --- 1.3.2 UserHead Section */
+/* --- --- 2.1.1 Formulars Login and Register */
+/* --- --- 2.2.1 Newsletter */
 /* --- --- 1.1.1 CollectionCard */
 /* --- --- 1.2.1 SetCard */
 .card__container {
@@ -11460,6 +11462,7 @@ a.text-dark:hover, a.text-dark:focus {
   background: transparent;
 }
 
+/* --- --- 2.1.1 Formulars Login and Register */
 .forminput__container {
   margin: 9px 0;
 }
@@ -11536,6 +11539,7 @@ a.text-dark:hover, a.text-dark:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 10vh 0;
 }
 
 .form__alreadyaccount {
