--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -11378,6 +11378,8 @@ a.text-dark:hover, a.text-dark:focus {
 /* --- --- 1.2.1 SetCard */
 /* --- --- 1.3.1 UserHead */
 /* --- --- 1.3.2 UserHead Section */
+/* --- --- 2.1.1 Formulars Login and Register */
+/* --- --- 2.2.1 Newsletter */
 /* --- --- 1.1.1 CollectionCard */
 /* --- --- 1.2.1 SetCard */
 .card__container {
@@ -11620,6 +11622,7 @@ a.text-dark:hover, a.text-dark:focus {
   background: transparent;
 }
 
+/* --- --- 2.1.1 Formulars Login and Register */
 .forminput__container {
   margin: 9px 0;
 }
@@ -11696,6 +11699,7 @@ a.text-dark:hover, a.text-dark:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 10vh 0;
 }
 
 .form__alreadyaccount {
@@ -11752,11 +11756,6 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 /* MENU */
-/* Components */
-/* Form Components */
-/* 2.1 FormField.js */
-/* 2.2 Login.js */
-/* 2.3 Register.js */
 /* LandPage Components */
 /* 3.1 Formular.js */
 /* 3.2 Promo.js */
@@ -11782,8 +11781,6 @@ a.text-dark:hover, a.text-dark:focus {
 /* 8.1 Layout.js */
 /* Animations */
 /* 9.1 Loading.js */
-/* Components */
-/* Form Components */
 /* LandPage Components */
 .main-page-h2 {
   color: #000536;
