--- a/mLingo/ClientApp/src/schema/styles/mLingo.scss
+++ b/mLingo/ClientApp/src/schema/styles/mLingo.scss
@@ -106,3 +106,10 @@ font-size: 16px;
     outline: none;
   }
 }
+
+// container //
+
+.all__containers__in__user__section{
+  flex: 0 0 79%;
+  max-width: 79%;
+}
