--- a/mLingo/ClientApp/src/schema/styles/BEM.scss
+++ b/mLingo/ClientApp/src/schema/styles/BEM.scss
@@ -2,10 +2,6 @@
 @import './mLingo.scss';
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss';
 
-.all__containers__in__user__section{
-    flex: 0 0 79%;
-    max-width: 79%;
-}
 
 //////////// Rebuild SCSS ////////////
 //////////// components ////////////
@@ -28,6 +24,13 @@
 /* --- --- 2.2.2 Opinions & Opinion */
 /* --- --- 2.2.3 Steps & Step */
 /* --- --- 2.2.4  Mainpage Welcome */
+// 3. layout
+/* --- --- 3.1.1  Layout Footer */
+/* --- --- 3.1.2  Layout Navbar */
+/* --- --- 3.1.3  Layout User Menu */
+/* --- --- 3.1.4  Layout User Menu */
+// 4. layouts
+/* --- --- 4.1.1  Layouts */
 
 
 
@@ -839,4 +842,98 @@ overflow-y: hidden;
         font-size: 10px;
         }
     }
+}
+
+//////////////////////////////////////////////////////
+/* --- --- 3.1.1  Layout Footer */
+//////////////////////////////////////////////////////
+
+.footer__container {
+    @extend .container;
+    background: $dark-blue;
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    color: white;
+}
+.footer__details{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &>div{
+    padding: 0 10px;
+    }
+
+    &>div:nth-child(2),&>div:nth-child(3){
+    border-left: 2px solid white;
+    }
+
+    @media(max-width: 767px){
+    &>div:nth-child(2),&>div:nth-child(3){
+        display: none;
+    }
+    }
+
+    p{
+    margin: 0 !important;
+    }
+}
+
+.social__mlingo {
+color: white;
+font-size: 24px;
+margin: 0 12px;
+transition: 0.5s;
+}
+.social__mlingo:hover{
+color: $light-green;
+cursor: pointer;
+}
+
+
+
+//////////////////////////////////////////////////////
+/* --- --- 4.1.1  Layouts */
+//////////////////////////////////////////////////////
+
+/* App Background and Bootstrap overwrites */
+.app__background{
+    background-color: $dark-blue;
+    position: absolute;
+    width: 100%;
+    min-height: 100%;
+    left: 0;
+    top: 0;
+    z-index: -999;
+}
+
+main.container{
+background-color: #F8F8F8;
+overflow: hidden;
+padding: 50px;
+position: relative;
+}
+.user--container{
+display: flex;
+padding: 0px !important;
+}
+
+@media(min-width: 768px){
+main.container{
+    border-radius: 70px;
+}
+}
+@media(max-width:767px){
+main.container{
+    max-width: 100%;
+}
+}
+
+// Landpage layout
+.container.p-0>div{
+padding: 50px;
 }
